[gd_scene load_steps=6 format=3 uid="uid://4y2sothc6pnb"]

[ext_resource type="Texture2D" uid="uid://bb1gbdrn2mbl8" path="res://assets/art/invertory_slot.png" id="1_1d2hm"]
[ext_resource type="Shader" path="res://ui/invertory_ui_slot.gdshader" id="1_ikjh8"]
[ext_resource type="Script" path="res://ui/invertory_ui_slot.gd" id="1_qdxu0"]
[ext_resource type="FontFile" uid="uid://jgumakw2jrae" path="res://assets/fonts/Xolonium-Regular.ttf" id="3_026pv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5r3e1"]
shader = ExtResource("1_ikjh8")
shader_parameter/rotation_speed = 1.0
shader_parameter/center = Vector2(0.5, 0.5)

[node name="Invertory_UI_slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.553
anchor_bottom = 0.58
offset_right = -63.6
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_qdxu0")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5r3e1")
position = Vector2(1.90735e-06, 1.90735e-06)
texture = ExtResource("1_1d2hm")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="ItemDisplay" type="Sprite2D" parent="CenterContainer/Panel"]

[node name="ItemCount" type="Label" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -32.0
offset_top = 9.0
offset_right = 31.0
offset_bottom = 32.0
theme_override_fonts/font = ExtResource("3_026pv")
theme_override_font_sizes/font_size = 16
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
